<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    tools:context=".login.phone_number.LoginPhoneNumber"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            app:tint="@color/themeColor"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/enter_ic"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/signin_act"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp" />





        <LinearLayout
            android:id="@+id/mobileNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/card_bordered_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/mobileField"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:autofillHints="phone"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/enter_mobile"
                android:maxLength="10"
                android:layout_marginEnd="10dp"
                android:paddingStart="6dp"
                android:textSize="18dp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        </LinearLayout>



        <Button
            android:id="@+id/sendOtpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="27dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/themeColor"
            android:padding="6dp"
            android:text="@string/send_otp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="70dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_act"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>