<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.VerifyOTP"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backLoginOTP"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_ic"
            app:tint="@color/themeColor"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/todo" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/verifyOTPLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="10dp"
        android:visibility="visible"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="horizontal|vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/padlock"
                        app:tint="@color/themeColor"/>

                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="20dp"
                        android:text="@string/otp_enter_txt" />
                    <TextView
                        android:layout_marginHorizontal="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:text="@string/code_snt" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/mobileNumberTextField"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:maxWidth="250dp"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/greyDark"
                            android:padding="5dp"
                            android:textSize="16dp"
                            android:text="@string/dummyNum" />
                        <TextView
                            android:id="@+id/edit_mail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/chng"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/blueHyperLink"
                            android:padding="5dp"
                            android:textSize="16dp"
                            android:layout_marginStart="8dp"
                            />
                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/otp_edit_text_1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:maxLines="1"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/otp_edit_text_2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:maxLines="1"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true"  />

                    <EditText
                        android:id="@+id/otp_edit_text_3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:textSize="18dp"
                        android:textAlignment="center"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true"  />

                    <EditText
                        android:id="@+id/otp_edit_text_4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true"  />

                    <EditText
                        android:id="@+id/otp_edit_text_5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:textSize="18dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true"  />

                    <EditText
                        android:id="@+id/otp_edit_text_6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:textSize="18dp"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:singleLine="true"  />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/BtnVerifyotp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/button"
                        android:padding="6dp"
                        android:text="@string/verify"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/themeColor" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/OTPseconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/txtotpdetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_wait"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/txtotptimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/_00_59"
                        android:textColor="@color/themeColor"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resendotlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txtdidnotreceive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_not_received"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/txtresendotp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/resend_otp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/themeColor"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
        
</LinearLayout>