<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".login.email.LoginEmail">


    <include layout="@layout/no_internet_layout" android:id="@+id/noInternetLayout"/>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_weight="1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center_horizontal"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/lightGrey">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/primary_logo_reverse"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="5dp"
                    android:text="@string/signin_act"
                    android:textColor="@color/themeColor"
                    android:textStyle="bold"
                    android:textSize="30dp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Enter your Email"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:background="@drawable/card_bordered_background"
                        android:id="@+id/emailField"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/maroon"
                    android:textSize="14dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    app:endIconMode="password_toggle"
                    android:id="@+id/passwordLayout"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Enter your Password"
                        android:layout_marginHorizontal="0dp"
                        android:paddingHorizontal="0dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:background="@drawable/card_bordered_background"
                        android:inputType="textPassword"
                        android:id="@+id/passwordField"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/passwordError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/maroon"
                    android:textSize="14dp"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/button_background"
                    app:backgroundTint="@color/themeColor"
                    android:padding="6dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/pass_frgt"
                    android:textColor="@color/blueHyperLink"
                    android:textSize="16dp"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/lightGrey"/>
                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/no_act"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <android.widget.Button
                    android:id="@+id/createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/create"
                    android:background="@drawable/button"
                    android:textColor="@color/themeColor"
                    android:textSize="18dp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</LinearLayout>